# Compiladores-UFERSA

./: .gitignore  CMakeLists.txt  lex.yy.cc  lexer.l  main.cpp  readme.md  teste.tonto  tonto_lexer.cpp  tonto_lexer.h
.github/: copilot-instructions.md
analisador_lexico/entities/: Token.cpp  Token.h  TokenAnalisys.cpp  TokenAnalisys.h
analisador_lexico/lexer/: lexer.l
analisador_lexico/lexer_utils/: KeywordManager.cpp  KeywordManager.h  Lexer_Utils.cpp  Lexer_Utils.h  lex_config.cpp  lex_config.h
analisador_lexico/lexer_utils/KeyWordGroup/: ClassStereotypeKeywords.h  KeyWordGroup.h  KeyWordManager.cpp  KeyWordManager.h  MetaAttributeKeywords.h  NativeTypeKeywords.h  RelationStereotypeKeywords.h  ReservedWordKeywords.h
analisador_lexico/lexer_utils/KeyWordGroup/ClassStereotypeKeywords/: ClassStereotypeKeywords.h
analisador_lexico/lexer_utils/KeyWordGroup/KeyWordManager/: KeyWordManager.cpp  KeyWordManager.h
analisador_lexico/lexer_utils/KeyWordGroup/MetaAttributeKeywords/: MetaAttributeKeywords.h
analisador_lexico/lexer_utils/KeyWordGroup/NativeTypeKeywords/: NativeTypeKeywords.h
analisador_lexico/lexer_utils/KeyWordGroup/RelationStereotypeKeywords/: RelationStereotypeKeywords.h
analisador_lexico/lexer_utils/KeyWordGroup/ReservedWordKeywords/: ReservedWordKeywords.h
analisador_lexico/util/: JsonWriter.cpp  JsonWriter.h
analisador_semantico/: SemanticAnalizer.cpp  SemanticAnalyzer.h
analisador_sintatico/: Parser.cpp  Parser.h  parser.y
testes/: teste.tonto
testes/CarExample/: carRental.tonto
testes/FoodAllergyExample/: alergiaAlimentar.tonto
testes/Hospital_Model/: ConsultaMedica.tonto  FuncionarioDaUBS.tonto  Paciente.tonto  UBS.tonto  Vacinacao.tonto
testes/Pizzaria_Model/: Cliente.tonto  CoberturasDePizza.tonto  ItensDaPizzaria.tonto  Pizza.tonto
testes/design_Patterns/: relator_pattern.tonto  role_pattern.tonto  subkind_pattern.tonto
util/: JsonWriter.cpp  JsonWriter.h
